[package]
name = "rust-sc2"
version = "0.9.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2018"
description = "Rust implementation of StarCraft II API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
sc2-proto = { git = "https://github.com/UltraMachine/sc2-proto-rs" }
# sc2-proto = { path = "../sc2-proto-rs" }
sc2-macro = { path = "sc2-macro" }
tungstenite = "^0.11.0"
url = "^2.1.1"
protobuf = "~2.14.0"
ndarray = "^0.13.1"
num-traits = "^0.2.12"
num-derive = "^0.3.0"
regex = "^1.3.9"
dirs = "^3.0.0"
itertools = "^0.9.0"
lazy_static = "^1.4.0"
maplit = "^1.0.2"
rand = "^0.7.3"
log = "^0.4.8"
rustc-hash = "^1.1.0"
rayon = { version = "^1.3.1", optional = true }
indexmap = "^1.4.0"
serde = { version = "^1.0.114", features = ["derive"], optional = true }

[dev-dependencies]
clap = "^2.33.1"

[features]
protoc = ["sc2-proto/protoc-rust"]

# hack: change when found better solution
[target.'cfg(feature = "rayon")'.dependencies]
indexmap = { version = "^1.4.0", features = ["rayon"] }
ndarray = { version = "^0.13.1", features = ["rayon"] }
