[package]
name = "rust-sc2"
version = "1.0.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2018"
description = "Rust implementation of StarCraft II API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
sc2-proto = "0.2.3"
# sc2-proto = { path = "../sc2-proto-rs" }
sc2-macro = { path = "sc2-macro", version = "1" }
tungstenite = "^0.12.0"
url = "^2.1.1"
protobuf = "^2.17.0"
ndarray = "^0.14.0"
num-traits = "^0.2.12"
num-derive = "^0.3.1"
regex = "^1.3.9"
dirs = "^3.0.1"
itertools = "^0.10.0"
lazy_static = "^1.4.0"
maplit = "^1.0.2"
rand = "^0.8.0"
log = "^0.4.11"
rustc-hash = "^1.1.0"
rayon = { version = "^1.3.1", optional = true }
parking_lot = { version = "^0.11.0", optional = true }
indexmap = "^1.5.1"
serde = { version = "^1.0.114", features = ["derive"], optional = true }

[dev-dependencies]
clap = "^2.33.2"

[features]
protoc = ["sc2-proto/protoc-rust"]
enemies_cache = []

# hack: change when will be found better solution
[target.'cfg(feature = "rayon")']
features = ["indexmap/rayon", "ndarray/rayon", "parking_lot"]
