[package]
name = "rust-sc2"
version = "1.2.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2021"
description = "Rust implementation of StarCraft II API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "README.md"
license = "MIT"

[dependencies]
sc2-proto = "0.2.3"
# sc2-proto = { path = "../sc2-proto-rs" }
sc2-macro = { path = "sc2-macro", version = "1" }
tungstenite = { version = "^0.17.0", default-features = false }
protobuf = "^2.17.0"
ndarray = "^0.15.1"
num-traits = "^0.2.12"
num-derive = "^0.3.1"
itertools = "^0.10.0"
lazy_static = "^1.4.0"
maplit = "^1.0.2"
rand = "^0.8.0"
log = "^0.4.11"
rustc-hash = "^1.1.0"
rayon = { version = "^1.3.1", optional = true }
parking_lot = { version = "^0.12.0", optional = true }
indexmap = "^1.5.1"
serde = { version = "^1.0.114", features = ["derive"], optional = true }
lazy-init = "^0.5.0"
once_cell = "^1.8.0"
dirs = "^4.0.0"

[target.'cfg(windows)'.dependencies]
regex = "^1.3.9"

[dev-dependencies]
clap = "^4.0.13"

[features]
protoc = ["sc2-proto/protoc-rust"]
enemies_cache = []
wine_sc2 = []
rayon = ["dep:rayon", "indexmap/rayon", "ndarray/rayon"]
