[package]
name = "sc2-macro"
version = "1.0.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2018"
description = "Procedural macros for rust-sc2 API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
sc2-proc-macro = { path = "macro", version = "1" }
