[package]
name = "sc2-proc-macro"
version = "1.0.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2018"
description = "Procedural macros for rust-sc2 API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "../../README.md"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.33", features = ["full"] }
quote = "^1.0.7"
proc-macro2 = "^1.0.18"
regex = "^1.3.9"
